--- a/assets/styles/aboutUs_styles.css
+++ b/assets/styles/aboutUs_styles.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: #f5f5f5;
+    background-color: #1f1843;
     color: #333;
     line-height: 1.6;
 }
@@ -63,6 +63,7 @@ body {
     position: relative;
     height: 100vh;
     overflow: hidden;
+    background-image: url('../Images/aboutUs_background.jpg');
 }
 
 .hero-image {
