--- a/assets/styles/aboutUs_styles.css
+++ b/assets/styles/aboutUs_styles.css
@@ -12,15 +12,21 @@ body {
 }
 
 /* Navigation */
+.main-section{
+    background-image: url('../Images/aboutUs_background.jpg');
+}
+.hero {
+    position: relative;
+    height: 100vh;
+    overflow: hidden;
+}
 
 .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* padding: 15px 30px; */
     padding-top: 3rem;
     padding-bottom: 1rem;
-    /* background-color: rgba(0, 0, 0, 0.3); */
     width: 100%;
 }
 
@@ -58,25 +64,12 @@ body {
     align-self: center;
 }
 
-/* Hero Section */
-.hero {
-    position: relative;
-    height: 100vh;
-    overflow: hidden;
-    background-image: url('../Images/aboutUs_background.jpg');
-}
-
-.hero-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
 /* About Us Section */
 .about-section {
     position: relative;
     padding: 80px 0;
     background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.7)), url('tropical-beach.jpg');
+    /* background-image: linear-gradient(to right, #ffecd2 0%, #fcb69f 100%); */
     background-size: cover;
     background-position: center;
     color: white;
