--- a/assets/styles/home_styles.css
+++ b/assets/styles/home_styles.css
@@ -37,17 +37,15 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* padding: 15px 30px; */
     padding-top: 3rem;
     padding-bottom: 1rem;
-    /* background-color: rgba(0, 0, 0, 0.3); */
     width: 100%;
 }
 
 .nav-links {
     display: flex;
     list-style: none;
-    margin: 0 auto; /* Center the nav links */
+    margin: 0 auto; 
     gap: 3rem;
 }
 
@@ -64,12 +62,6 @@ body {
     letter-spacing: 1px;
 }
 
-.search-icon {
-    color: white;
-    font-size: 18px;
-    cursor: pointer;
-    padding-right: 5rem;
-}
 
 .line{
     height: 0.09rem;
@@ -93,8 +85,11 @@ body {
 }
 
 .tours-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background-color: #040d14;
-    /* padding: 50px 30px; */
     position: relative;
     padding: 8rem;
 }
